--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app" class="w-[100vw] overflow-hidden"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
